; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_is_x86_ret.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_is_x86_ret.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 (i32, i32, i32*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32)* @is_x86_ret to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_x86_ret(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [1 x i32], align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  %10 = load i32 (i32, i32, i32*, i32)*, i32 (i32, i32, i32*, i32)** %9, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %17 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %18 = call i32 @R_ARRAY_SIZE(i32* %17)
  %19 = call i32 %10(i32 %14, i32 %15, i32* %16, i32 %18)
  %20 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %21 = load i32, i32* %20, align 4
  switch i32 %21, label %23 [
    i32 195, label %22
    i32 203, label %22
    i32 194, label %22
    i32 202, label %22
  ]

22:                                               ; preds = %2, %2, %2, %2
  store i32 1, i32* %3, align 4
  br label %24

23:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %22
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @R_ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
